DHC Components/workflows/objects/DHC_Setup__c.object
<CustomObject>
    <fields>
        <fullName>DHC_CLIENTSECRET__c</fullName>
        <label>DHC_CLIENTSECRET</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_ClientID__c</fullName>
        <label>DHC_ClientID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>DHC_Setup</label>
    <nameField>
        <label>DHC_Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DHC_Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>